<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resultCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_result_card"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 25% -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/quarterGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <!-- 50% -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/halfGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <!-- ===================== RESULTS (0 - 25%) ===================== -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/resultsBlock"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/quarterGuide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/labelResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_results"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/valueResults"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="6dp"
                android:gravity="top|start"
                android:text="@string/data_empty"
                android:textIsSelectable="true"
                android:includeFontPadding="false"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeStepGranularity="1sp"
                app:layout_constraintStart_toEndOf="@id/labelResults"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- ===================== SUCCESSES (25 - 50%) ===================== -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/successesBlock"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/quarterGuide"
            app:layout_constraintBottom_toTopOf="@id/halfGuide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/labelSuccesses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_successes"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/valueSuccesses"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:text="@string/data_empty"
                android:textIsSelectable="true"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeStepGranularity="1sp"
                app:layout_constraintStart_toEndOf="@id/labelSuccesses"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- ===================== SUM (50 - 100%) ===================== -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/valueSum"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/data_empty"
            android:textStyle="bold"
            android:textIsSelectable="true"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="24sp"
            app:autoSizeMaxTextSize="160sp"
            app:autoSizeStepGranularity="2sp"
            app:layout_constraintTop_toBottomOf="@id/halfGuide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCleanResults"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="3dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:contentDescription="@string/label_minus"

            app:icon="@drawable/x_clear"
            app:iconPadding="0dp"
            app:iconTint="@color/roll_button_text"
            app:iconGravity="textStart"

            app:backgroundTint="@color/screen_background"
            app:rippleColor="@color/ripple_color"
            app:cornerRadius="24dp"
            app:elevation="6dp"
            app:pressedTranslationZ="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>