<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/diceNumberWidget"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutDiceNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="0dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="0dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonContainerDiceNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDiceNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:inputType="number"
                android:maxLength="4"
                android:text="4"
                android:textSize="21sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttonContainerDiceNumber"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="-1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/inputLayoutDiceNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/inputLayoutDiceNumber">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonUpDiceNumber"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="0dp"
                android:text="@string/label_plus"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDownDiceNumber"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="-1dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="0dp"
                android:text="@string/label_minus"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/labelDiceNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/label_roll_number"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/diceNumberWidget"
        app:layout_constraintEnd_toStartOf="@id/diceNumberWidget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/diceNumberWidget" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sideNumberWidget"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diceNumberWidget">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutSideNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="0dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="0dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonContainerSideNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSideNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:inputType="number"
                android:maxLength="4"
                android:text="10"
                android:textSize="21sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttonContainerSideNumber"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="-1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/inputLayoutSideNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/inputLayoutSideNumber">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonUpSideNumber"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="0dp"
                android:text="@string/label_plus"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDownSideNumber"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="-1dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="0dp"
                android:text="@string/label_minus"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/labelSideNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/label_side_number"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/sideNumberWidget"
        app:layout_constraintEnd_toStartOf="@id/sideNumberWidget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/sideNumberWidget" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/difficultyWidget"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sideNumberWidget">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutDifficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="0dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="0dp"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonContainerDifficulty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:inputType="number"
                android:maxLength="4"
                android:text="6"
                android:textSize="21sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttonContainerDifficulty"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="-1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/inputLayoutDifficulty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/inputLayoutDifficulty">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonUpDifficulty"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="0dp"
                android:text="@string/label_plus"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDownDifficulty"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="-1dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="0dp"
                android:text="@string/label_minus"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/labelDifficultyCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/label_difficulty_check"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/difficultyWidget"
        app:layout_constraintEnd_toStartOf="@id/difficultyWidget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/difficultyWidget" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkOneCancelsSuccess"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:checked="true"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difficultyWidget"
        app:useMaterialThemeColors="true" />

    <TextView
        android:id="@+id/labelOneCancelsSuccess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/label_one_cancels_success"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/checkOneCancelsSuccess"
        app:layout_constraintEnd_toStartOf="@id/checkOneCancelsSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkOneCancelsSuccess" />

</androidx.constraintlayout.widget.ConstraintLayout>